# fastapi-backend

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/: main.py
src/api/dependencies/: api_key.py
src/api/routers/: __init__.py  files.py  health.py  stocks.py  users.py
src/core/: config.py
src/db/: models.py  session.py
src/schemas/: user.py
src/services/: file_service.py  stock_service.py  user_service.py
src/utils/: password.py  storage.py
